--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsexcel",
+  "name": "jsxls",
   "version": "0.1.4",
   "description": "JavaScript realizes all functions of Excel 2016",
   "main": "index.js",
@@ -12,12 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/kongnet/excel.git"
   },
-  "keywords": [
-    "excel",
-    "javascript",
-    "es6",
-    "nodejs"
-  ],
+  "keywords": ["excel", "javascript", "es6", "nodejs"],
   "author": "Kongnet",
   "license": "MIT",
   "bugs": {
