--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "JavaScript realizes all functions of Excel 2016",
   "main": "index.js",
   "scripts": {
+    "bootstrap": "node scripts/bootstrap.js",
+    "dev": "node scripts/dev.js",
+    "build": "node scripts/build.js",
+    "create-api-doc": "api-documenter markdown --input-folder ./temp --output-folder ./temp/markdown",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cz": "conventional-changelog -p atom -i CHANGELOG.md -s -r 0 && git add . && git status && git cz",
     "push": "npm version patch && npm publish .  && git push"
@@ -28,7 +32,17 @@
     "meeko": "^1.8.103"
   },
   "devDependencies": {
-    "cz-jt": "^0.1.11"
+    "@microsoft/api-documenter": "^7.8.16",
+    "@microsoft/api-extractor": "^7.8.14",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "brotli": "^1.3.2",
+    "cz-jt": "^0.1.11",
+    "execa": "^4.0.2",
+    "rollup": "^2.18.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "typescript": "^3.9.5"
   },
   "config": {
     "commitizen": {
