feat: 测试 环境搭建

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "rootDir": ".",
     "baseUrl": ".",
     "outDir": "dist",
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES2019",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "lib": ["esnext", "dom"],
-    "noUnusedLocals": true,
+    "lib": ["ES2019", "dom"],
+    "types": ["jest"],
+    "noUnusedLocals": false,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "resolveJsonModule": true,
