--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
     "create-api-doc": "api-documenter markdown --input-folder ./temp --output-folder ./temp/markdown",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "cz": "conventional-changelog -p atom -i CHANGELOG.md -s -r 0 && git add . && git status && git cz",
     "push": "npm version patch && npm publish .  && git push"
   },
@@ -36,12 +36,15 @@
     "@microsoft/api-extractor": "^7.8.14",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "@types/jest": "^26.0.3",
     "brotli": "^1.3.2",
     "cz-jt": "^0.1.11",
     "execa": "^4.0.2",
+    "jest": "^26.1.0",
     "rollup": "^2.18.0",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
+    "ts-jest": "^26.1.1",
     "typescript": "^3.9.5"
   },
   "config": {
