--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "node scripts/build.js",
     "create-api-doc": "api-documenter markdown --input-folder ./temp --output-folder ./temp/markdown",
     "test": "jest",
+    "release": "node scripts/release.js",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "cz": "conventional-changelog -p atom -i CHANGELOG.md -s -r 0 && git add . && git status && git cz",
     "push": "npm version patch && npm publish .  && git push"
   },
@@ -38,7 +40,9 @@
     "@rollup/plugin-replace": "^2.3.3",
     "@types/jest": "^26.0.3",
     "brotli": "^1.3.2",
+    "conventional-changelog-cli": "^2.0.34",
     "cz-jt": "^0.1.11",
+    "enquirer": "^2.3.5",
     "execa": "^4.0.2",
     "jest": "^26.1.0",
     "rollup": "^2.18.0",
