--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsxls/math",
-  "version": "0.1.12",
+  "version": "0.1.13-alpha.0",
   "description": "@jsxls/math",
   "main": "index.js",
   "files": [
