--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsxls",
-  "version": "0.1.12",
+  "version": "0.1.13-alpha.0",
   "description": "JavaScript realizes all functions of Excel 2016",
   "main": "index.js",
   "scripts": {
