--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jsxls/shared",
   "private": true,
-  "version": "0.1.12",
+  "version": "0.1.13-alpha.0",
   "description": "@jsxls/shared",
   "main": "index.js",
   "files": [
