--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript realizes all functions of Excel 2016",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "cz": "conventional-changelog -p atom -i CHANGELOG.md -s -r 0 && git add . && git status && git cz",
     "push": "npm version patch && npm publish .  && git push"
   },
@@ -12,12 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/kongnet/excel.git"
   },
-  "keywords": [
-    "excel",
-    "javascript",
-    "es6",
-    "nodejs"
-  ],
+  "keywords": ["excel", "javascript", "es6", "nodejs"],
   "author": "Kongnet",
   "license": "MIT",
   "bugs": {
@@ -28,7 +23,8 @@
     "meeko": "^1.8.103"
   },
   "devDependencies": {
-    "cz-jt": "^0.1.11"
+    "cz-jt": "^0.1.11",
+    "jest": "^26.1.0"
   },
   "config": {
     "commitizen": {
